# vnids

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
.specify/memory/: constitution.md
cmake/: android-toolchain.cmake  yocto-toolchain.cmake
deploy/android/: Android.bp  vnidsd.rc  vnidsd.te
deploy/common/: install.sh  vnidsd.conf.example  vnidsd.service
deploy/yocto/: layer.conf  vnids_1.0.bb
shared/include/: vnids_config.h  vnids_event.h  vnids_ipc.h  vnids_log.h  vnids_types.h
specs/: instructions.md
specs/001-suricata-ids/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-suricata-ids/checklists/: requirements.md
specs/001-suricata-ids/contracts/: event-schema.json  ipc-protocol.md
suricata/config/: suricata.yaml
suricata/rules/: vnids-baseline.rules  vnids-doip.rules
suricata/scripts/: build-android.sh  build-linux-arm64.sh  build-yocto.sh
tests/: conftest.py  pytest.ini  requirements.txt
tests/data/: generate_pcaps.py
tests/data/config/: vnids-test.yaml
tests/data/eve/: sample-alerts.json  sample-flows.json
tests/data/pcaps/: doip-test.pcap  http-test.pcap  someip-test.pcap  suspicious-test.pcap
tests/data/rules/: automotive-test.rules  http-test.rules  network-test.rules
tests/docker/: Dockerfile  Dockerfile.arm64  emulator-config.ini
tests/integration/: conftest.py  test_daemon.py  test_detection.py
tests/scripts/: emulator-start.sh  run-android-tests.sh  run-arm64-tests.sh
tests/unit/: CMakeLists.txt  test_config.c  test_config.py  test_event_queue.c  test_events.py  test_ipc.py  test_main.c  test_rules.py  test_types.c
vnids-cli/: CMakeLists.txt
vnids-cli/src/: client.c  commands.c  main.c  output.c
vnidsd/: CMakeLists.txt
vnidsd/include/: vnidsd.h
vnidsd/src/: api_server.c  config.c  config_validate.c  daemon.c  eve_parser.c  eve_reader.c  event_handler.c  event_queue.c  eventloop.c  ipc_client.c  ipc_control.c  ipc_message.c  ipc_server.c  log.c  main.c  pidfile.c  signal.c  storage.c  types.c  watchdog.c
